--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -10,16 +10,15 @@
 }
 .contact-form {
   text-align: center;
-  background: linear-gradient(
-    145deg,
-    rgba(110, 110, 110, 0.75),
-    rgba(128, 128, 128, 0.75)
-  );
+  background: var(--background-target);
   border-radius: 15px;
-  box-shadow: 0 4px 8px rgba(184, 184, 184, 0.2),
-    0 6px 20px rgba(189, 189, 189, 0.15);
-  width: 50%;
+  box-shadow: var(--shadow);
+  width: 0;
   margin: auto;
+  color: var(--color-text);
+  animation: hide-contact linear both;
+  animation-timeline: scroll(root block);
+  animation-range: 340vh 390vh;
 }
 .contact-form form {
   display: flex;
@@ -37,15 +36,11 @@
   margin-top: 15px;
 }
 .inputs {
-  width: 0%;
+  width: 100%;
   border: none;
   border-bottom: 1px var(--color-text) solid;
   background-color: transparent;
   box-sizing: border-box;
-  color: var(--color-text);
-  animation: hide-contact linear both;
-  animation-timeline: scroll(root block);
-  animation-range: 350vh 390vh;
 }
 
 .inputs:focus {
@@ -63,6 +58,17 @@
   margin: auto;
   color: white;
   border-radius: 5px;
+}
+@keyframes icon-contact {
+  to {
+    color: var(--color-primary);
+    font-size: 0;
+  }
+}
+@keyframes hide-contact {
+  to {
+    width: 50%;
+  }
 }
 
 @media only screen and (max-width: 600px) {
