--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,24 +1,22 @@
 .contact {
   height: 100vh;
+  position: relative;
   overflow-y: auto;
   color: var(--color-text);
-  z-index: 3;
   place-content: center;
   animation: reveal linear both;
   animation-timeline: view();
   animation-range: entry 50% cover 90%;
+  z-index: 2;
 }
 .contact-form {
   text-align: center;
   background: var(--background-target);
   border-radius: 15px;
   box-shadow: var(--shadow);
-  width: 0;
+  width: 50%;
   margin: auto;
   color: var(--color-text);
-  animation: hide-contact linear both;
-  animation-timeline: scroll(root block);
-  animation-range: 340vh 390vh;
 }
 .contact-form form {
   display: flex;
@@ -30,6 +28,7 @@
   padding-left: 20px;
   margin: 10px 0;
   height: 30px;
+  color: var(--color-text);
 }
 .contact-icon {
   position: absolute;
@@ -60,28 +59,15 @@
   border-radius: 5px;
 }
 @keyframes icon-contact {
-  to {
+  400% {
     color: var(--color-primary);
-    font-size: 0;
-  }
-}
-@keyframes hide-contact {
-  to {
-    width: 50%;
   }
 }
 
 @media only screen and (max-width: 600px) {
-  .contact {
-  }
   .contact-form {
     place-content: center;
     width: 80%;
     height: 60%;
-  }
-  .inputs {
-    animation: hide-contact linear both;
-    animation-timeline: scroll(root block);
-    animation-range: 320vh 365vh;
   }
 }
