--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -18,6 +18,7 @@
   margin: auto;
   color: var(--color-text);
 }
+
 .contact-form form {
   display: flex;
   flex-direction: column;
@@ -26,13 +27,16 @@
 }
 .contact-form input {
   padding-left: 20px;
-  margin: 10px 0;
+
   height: 30px;
   color: var(--color-text);
 }
-.contact-icon {
-  position: absolute;
-  margin-top: 15px;
+.input-contact {
+  display: flex;
+  justify-content: space-between;
+  top: 30px;
+  position: relative;
+  z-index: 0;
 }
 .inputs {
   width: 100%;
@@ -40,6 +44,8 @@
   border-bottom: 1px var(--color-text) solid;
   background-color: transparent;
   box-sizing: border-box;
+  position: relative;
+  z-index: 4;
 }
 
 .inputs:focus {
