--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -16,9 +16,10 @@
   box-shadow: var(--shadow);
   width: 50%;
   margin: auto;
+  padding: 1%;
   color: var(--color-text);
+  padding: 1%;
 }
-
 .contact-form form {
   display: flex;
   flex-direction: column;
@@ -47,7 +48,6 @@
   position: relative;
   z-index: 4;
 }
-
 .inputs:focus {
   outline: none;
 }
@@ -57,7 +57,7 @@
 .button {
   cursor: pointer;
   background-color: transparent;
-  border: 1px var(--color-text) solid;
+  border: 2px var(--color-text) solid;
   padding: 5px;
   width: 30%;
   margin: auto;
@@ -78,6 +78,35 @@
   animation-timeline: scroll(root block);
   animation-range: 350vh 400vh;
   -webkit-box-reflect: below 10px linear-gradient(transparent, #c2c2c271);
+}
+.success {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: var(--background-target);
+  box-shadow: var(--shadow);
+  width: 45%;
+  padding: 2%;
+  gap: 25px;
+  margin: auto;
+  border-radius: 15px;
+}
+.disabled {
+  display: none;
+}
+.icon-success {
+  height: 150px;
+  width: 150px;
+}
+.success button {
+  cursor: pointer;
+  background-color: transparent;
+  border: 2px var(--color-text) solid;
+  padding: 3px;
+  width: 20%;
+  margin: auto;
+  color: white;
+  border-radius: 5px;
 }
 @keyframes icon-contact {
   to {
@@ -103,5 +132,17 @@
   .icon-container {
     margin: 4%;
     gap: 7%;
+  }
+  .success {
+    width: 80%;
+    padding: 0;
+    gap: 0px;
+  }
+  .icon-success {
+    height: 120px;
+    width: 120px;
+  }
+  .success button {
+    width: 40%;
   }
 }
