--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -18,7 +18,6 @@
   display: none;
 }
 .text-intro {
-  position: fixed;
   background-color: rgba(37, 37, 37, 0.648);
   display: flex;
   flex-direction: column;
@@ -26,21 +25,16 @@
   align-items: center;
   gap: 10px;
   top: 0;
+  height: 100vh;
   height: 100dvh;
   width: 100%;
   z-index: 1;
-  animation: enhance-intro linear both, section-contact linear both;
-  animation-timeline: scroll(root block);
-  animation-range: 0 90vh, 330vh 395vh;
 }
 .text-presentation {
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
   position: relative;
-  animation: hide-text linear both;
-  animation-timeline: scroll(root block);
-  animation-range: 30.5vh 30vh;
   width: 100%;
 }
 .text-presentation::before {
@@ -58,9 +52,6 @@
   padding: 5px;
   margin-right: 30%;
   font-size: 1.5em;
-  animation: presentation linear both;
-  animation-timeline: scroll(root block);
-  animation-range: 0 40vh;
 }
 .text-intro p {
   color: var(--color-text);
@@ -68,9 +59,6 @@
   margin: 0;
   margin-left: 30%;
   font-size: 1.4em;
-  animation: presentation linear both;
-  animation-timeline: scroll(root block);
-  animation-range: 0 35vh;
 }
 hr {
   display: none;
@@ -82,14 +70,11 @@ hr {
 .icon {
   padding: 5px;
   background-color: var(--color-text);
-  border-radius: 10dvh;
+  border-radius: 100px;
   width: 4vh;
   height: 4vh;
   transition: 0.2s;
   -webkit-box-reflect: below 10px linear-gradient(transparent, #c2c2c271);
-  animation: icon-reflect linear both, change-icons linear both;
-  animation-timeline: scroll(root block);
-  animation-range: 0vh 35vh, 350vh 400vh;
 }
 .icon:hover {
   color: var(--color-primary);
@@ -100,6 +85,37 @@ hr {
   padding: 0;
   margin: 0;
 }
+@supports (animation-timeline: scroll()) {
+  @media (prefers-reduced-motion: no-preference) {
+    .text-intro {
+      position: fixed;
+      animation: enhance-intro linear both, section-contact linear both;
+      animation-timeline: scroll(root block);
+      animation-range: 0 90vh, 330vh 395vh;
+    }
+    .text-intro p {
+      animation: presentation linear both;
+      animation-timeline: scroll(root block);
+      animation-range: 0 35vh;
+    }
+    .text-presentation {
+      animation: hide-text linear both;
+      animation-timeline: scroll(root block);
+      animation-range: 30.5vh 30vh;
+    }
+    .text-intro strong {
+      animation: presentation linear both;
+      animation-timeline: scroll(root block);
+      animation-range: 0 40vh;
+    }
+    .icon {
+      animation: icon-reflect linear both, change-icons linear both;
+      animation-timeline: scroll(root block);
+      animation-range: 0vh 35vh, 350vh 400vh;
+    }
+  }
+}
+
 @keyframes icon-reflect {
   0% {
     -webkit-box-reflect: below 10px linear-gradient(transparent, #c2c2c24d);
@@ -158,9 +174,7 @@ hr {
 @media only screen and (max-width: 600px) {
   .text-intro {
     gap: 15px;
-    animation-range: 0 90vh, 340vh 370vh;
   }
-
   .photo {
     display: none;
   }
@@ -177,9 +191,6 @@ hr {
     display: grid;
     grid-template-columns: 1fr;
     position: relative;
-    animation: hide-text linear both;
-    animation-timeline: scroll(root block);
-    animation-range: 0 37vh;
   }
   .text-presentation::before {
     display: none;
@@ -191,9 +202,6 @@ hr {
     height: 1px;
     border: none;
     background-color: var(--color-text);
-    animation: hide-text linear both;
-    animation-timeline: scroll(root block);
-    animation-range: 0 30vh;
   }
   .text-intro strong {
     width: 100%;
@@ -201,12 +209,33 @@ hr {
     margin: 0;
   }
   .icon {
-    animation-range: 0vh 35vh, 340vh 370vh;
   }
   .text-intro p {
     display: none;
   }
   .icon-presentation {
     gap: 4vh;
+  }
+  @supports (animation-timeline: scroll()) {
+    @media (prefers-reduced-motion: no-preference) {
+      .text-intro {
+        animation: enhance-intro linear both, section-contact linear both;
+        animation-timeline: scroll(root block);
+        animation-range: 0 90vh, 340vh 370vh;
+      }
+      .text-presentation {
+        animation: hide-text linear both;
+        animation-timeline: scroll(root block);
+        animation-range: 0 37vh;
+      }
+      hr {
+        animation: hide-text linear both;
+        animation-timeline: scroll(root block);
+        animation-range: 0 30vh;
+      }
+      .icon {
+        animation-range: 0vh 35vh, 340vh 370vh;
+      }
+    }
   }
 }
