--- a/src/styles/studies.css
+++ b/src/styles/studies.css
@@ -2,7 +2,6 @@
   height: 100vh;
   height: 100dvh;
   place-content: center;
-  display: grid;
   color: var(--color-text);
 }
 .studies {
@@ -12,8 +11,9 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 3%;
-  margin: 5%;
+  padding: 2%;
+  margin: auto;
+  width: 80%;
   position: relative;
   z-index: 3;
   border-radius: 15px;
@@ -26,7 +26,7 @@
 
 .certificates {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   place-items: center;
   margin-bottom: 50px;
   gap: 15px;
@@ -34,7 +34,7 @@
 }
 .certificates-studies {
   cursor: pointer;
-  max-width: 210px;
+  max-width: 90%;
   transition: transform 0.2s ease;
 }
 .certificates-studies:hover {
@@ -73,12 +73,17 @@
   .certificates {
     grid-template-columns: 1fr 1fr;
     gap: 20px;
+    margin: auto;
+    margin-bottom: 50px;
+  }
+  .studies {
+    width: 90%;
   }
   .studies p {
     width: 95%;
   }
 
   .certificates-studies {
-    max-width: 150px;
+    max-width: 100%;
   }
 }
